--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                             <div class="icon-box">
                                 <img src="img/resource/termite.png" alt="">
                             </div>
-                            <h5><a>Pest Control</a></h5>
+                            <h5><a>Zararkunandalarga qarshi kurash</a></h5>
 
                             <!-- <div class="link-box"><a href="fire-alarm.html">know more</a></div> -->
                         </div>
@@ -476,7 +476,7 @@
                             <div class="icon-box">
                                 <img src="img/resource/pest.png" alt="">
                             </div>
-                            <h5><a>Termite Control</a></h5>
+                            <h5><a>Termit nazorati</a></h5>
 
                             <!-- <div class="link-box"><a href="fire-alarm.html">know more</a></div> -->
                         </div>
@@ -493,7 +493,7 @@
                             <div class="icon-box">
                                 <img src="img/resource/bedbug.png" alt="">
                             </div>
-                            <h5><a> Bed Bug Control</a></h5>
+                            <h5><a>Klopa nazorati</a></h5>
 
                             <!-- <div class="link-box"><a href="fire-alarm.html">know more</a></div> -->
                         </div>
@@ -510,7 +510,7 @@
                             <div class="icon-box">
                                 <img src="img/resource/mosquito.png" alt="">
                             </div>
-                            <h5><a>Mosquito Control</a></h5>
+                            <h5><a>Chivionlar nazorati</a></h5>
 
                             <!-- <div class="link-box"><a href="fire-alarm.html">know more</a></div> -->
                         </div>
@@ -529,7 +529,7 @@
                             <div class="icon-box">
                                 <img src="img/resource/wildlife.png" alt="">
                             </div>
-                            <h5><a>Wildlife Control</a></h5>
+                            <h5><a>Yovvoyi tabiatni nazorat qilish</a></h5>
 
                             <!-- <div class="link-box"><a href="fire-alarm.html">know more</a></div> -->
                         </div>
@@ -546,7 +546,7 @@
                             <div class="icon-box">
                                 <img src="img/resource/ant.png" alt="">
                             </div>
-                            <h5><a>Fire Ants Control</a></h5>
+                            <h5><a>Chumolilarni nazorat qilish</a></h5>
 
                             <!-- <div class="link-box"><a href="fire-alarm.html">know more</a></div> -->
                         </div>
@@ -563,7 +563,7 @@
                             <div class="icon-box">
                                 <img src="img/resource/fly.png" alt="">
                             </div>
-                            <h5><a> Fly Control</a></h5>
+                            <h5><a>Qanotli hasharotlar nazorati </a></h5>
 
                             <!-- <div class="link-box"><a href="fire-alarm.html">know more</a></div> -->
                         </div>
@@ -580,7 +580,7 @@
                             <div class="icon-box">
                                 <img src="img/resource/rat.png" alt="">
                             </div>
-                            <h5><a>Insect Control</a></h5>
+                            <h5><a>Sichqon va kalamushlar nazorati</a></h5>
 
                             <!-- <div class="link-box"><a href="fire-alarm.html">know more</a></div> -->
                         </div>
@@ -588,9 +588,9 @@
                     <!-- Service Block -->
                 </div>
                 <!-- /col -->
-                <div class="col-md-12">
+                <!-- <div class="col-md-12">
                     <a href="#" class="theme-btn btn-lg">view all service</a>
-                </div>
+                </div> -->
 
             </div>
             <!-- /row -->
